--- a/custom_components/surikat-ha/manifest.json
+++ b/custom_components/surikat-ha/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "surikat",
-  "name": "Surikat Plugin for Home Assistant",
+  "name": "Surikat HA",
   "requirements": ["flask", "paho-mqtt"],
   "dependencies": ["frigate"],
   "codeowners": ["@samuelgoumaz"],
