--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,33 @@
-name: Surikat HA
-slug: surikat-ha
-version: "0.1.0"
-description: Edit YAML configs securely
+# config.yaml (add-on)
+name: "Surikat HA"
+description: "Surikat HA plugin for Home Assistant"
+version: "1.0.23"
+slug: "surikat-ha"
+init: false
+arch:
+  - aarch64
+  - amd64
+  - armhf
+  - armv7
+  - i386
 startup: services
-boot: auto
-host_network: true
-
-options:
-  port: 8129
-
-schema:
-  port: int
-
-map:
-  - config:rw
-
 ports:
-  8129/tcp: 8129
-
-ingress: false
+  8000/tcp: 8000
+options:
+  mqtt_host: "mqtt://localhost"
+  mqtt_port: 1883
+  mqtt_topic: "frigate/events"
+  mqtt_user: "user"
+  mqtt_password: "password"
+  default_name: "password"
+schema:
+  mqtt_host: str
+  mqtt_port: int
+  mqtt_topic: str
+  mqtt_user: str
+  mqtt_password: str
+  default_name: str
+map:
+  config:
+    target: /config
+    readonly: false
