--- a/config.yaml
+++ b/config.yaml
@@ -1,18 +1,27 @@
-# config.yaml (add-on)
 name: "Surikat HA"
 description: "Surikat HA plugin for Home Assistant"
-version: "1.0.24"
+version: "1.0.25"
 slug: "surikat-ha"
+
+# Init false car l'addon ne nécessite pas de processus systemd
 init: false
+
+# Architectures supportées
 arch:
   - aarch64
   - amd64
   - armhf
   - armv7
   - i386
+
+# Mode de démarrage
 startup: services
+
+# Ports exposés
 ports:
   8000/tcp: 8000
+
+# Options configurables par l'utilisateur
 options:
   mqtt_host: "mqtt://localhost"
   mqtt_port: 1883
@@ -20,6 +29,8 @@ options:
   mqtt_user: "user"
   mqtt_password: "password"
   default_name: "password"
+
+# Validation des options (types)
 schema:
   mqtt_host: str
   mqtt_port: int
@@ -27,6 +38,8 @@ schema:
   mqtt_user: str
   mqtt_password: str
   default_name: str
+
+# Mapping des volumes
 map:
   config:
     target: /config
