--- a/surikat-ha/Dockerfile.dev
+++ b/surikat-ha/Dockerfile.dev
@@ -1,4 +1,4 @@
-ARG BUILD_FROM=ghcr.io/hassio-addons/base:11.0.0
+ARG BUILD_FROM=python:3.11-slim
 FROM ${BUILD_FROM}
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
