--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,7 +6,7 @@
 # docker build -f Dockerfile.dev -t surikat-ha .
 # docker run -p 8000:8000 surikat-ha
 
-ARG BUILD_FROM
+ARG BUILD_FROM=python:3.11-slim
 FROM $BUILD_FROM
 
 # Installer les dépendances pour l'add-on
