--- a/config.yaml
+++ b/config.yaml
@@ -11,16 +11,12 @@
 
 name: "Surikat HA"
 description: "My first real add-on!"
-url: "website with more information about the add-on (e.g., a forum thread for support)"
-version: "1.0.3"
+url: "https://github.com/surikat-ch/surikat-ha-repo"
+version: "1.0.4"
 slug: "surikat_ha"
 init: false
 arch:
-  - aarch64
   - amd64
-  - armhf
-  - armv7
-  - i386
 ports:
   123/tcp: 123
 map:
