--- a/config.yaml
+++ b/config.yaml
@@ -12,11 +12,15 @@
 name: "Surikat HA"
 description: "My first real add-on!"
 url: "https://github.com/surikat-ch/surikat-ha-repo"
-version: "1.0.5"
+version: "1.0.6"
 slug: "surikat_ha"
 init: false
 arch:
+  - aarch64
   - amd64
+  - armhf
+  - armv7
+  - i386
 ports:
   123/tcp: 123
 map:
